# ChangeLog for media-sound/gnump3d
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/gnump3d/ChangeLog,v 1.63 2008/01/17 18:58:41 grobian Exp $

  17 Jan 2008; Fabian Groffen <grobian@gentoo.org> gnump3d-2.9_pre7.ebuild,
  gnump3d-2.9_pre99.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  30 Nov 2007; Steve Dibb <beandog@gentoo.org> gnump3d-3.0.ebuild:
  amd64 stable, bug 193132

  28 Nov 2007; Raúl Porcel <armin76@gentoo.org> gnump3d-3.0.ebuild:
  alpha/sparc stable wrt security #193132

  25 Nov 2007; Christian Faulhammer <opfer@gentoo.org> gnump3d-3.0.ebuild:
  stable x86, security bug 193132

  25 Nov 2007; Markus Rothe <corsair@gentoo.org> gnump3d-3.0.ebuild:
  Stable on ppc64; bug #193132

*gnump3d-3.0 (24 Nov 2007)

  24 Nov 2007; Alexis Ballier <aballier@gentoo.org> +gnump3d-3.0.ebuild:
  version bump, bug #193132

  15 Oct 2007; Markus Rothe <corsair@gentoo.org> gnump3d-2.9_pre99.ebuild:
  Stable on ppc64

*gnump3d-2.9_pre99 (05 Aug 2007)
*gnump3d-2.9_pre7 (05 Aug 2007)

  05 Aug 2007; Samuli Suominen <drac@gentoo.org> +gnump3d-2.9_pre7.ebuild,
  +gnump3d-2.9_pre99.ebuild, -gnump3d-2.9.7-r1.ebuild,
  -gnump3d-2.9.9.9.ebuild:
  Rename 2.9.7-r1 to 2.9_pre7, 2.9.9.9 to 2.9_pre99. Version 2.9 is 2.9final,
  and is latest.

  05 Aug 2007; Samuli Suominen <drac@gentoo.org> +gnump3d-2.9.ebuild:
  Version bump for bug 182814, thanks to shad for reporting.

  13 May 2007; Steve Dibb <beandog@gentoo.org> gnump3d-2.9.9.9.ebuild:
  amd64 stable

  20 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  gnump3d-2.9.9.9.ebuild:
  Stable on sparc

  15 Mar 2007; Marien Zwart <marienz@gentoo.org> gnump3d-2.9.7-r1.ebuild,
  gnump3d-2.9.8.ebuild:
  Use RESTRICT=test instead of an empty src_test to skip tests, thanks to
  ferringb for reporting.

*gnump3d-2.9.9.9 (26 Feb 2007)

  26 Feb 2007; Steve Dibb <beandog@gentoo.org> +gnump3d-2.9.9.9.ebuild:
  Version bump, bug 156801
