@@ -1,7 +1,9 @@
 #!/sbin/runscript
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/gnump3d/files/gnump3d.init.d,v 1.3 2004/07/14 22:48:07 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/gnump3d/files/gnump3d.init.d,v 1.4 2008/06/03 14:52:33 beandog Exp $
+
+opts="start stop index"
 
 depend() {
 	need net
@@ -28,3 +30,8 @@ stop() {
 	eend $?
 }
 
+index() {
+	ebegin "Indexing music files"
+	/usr/bin/gnump3d-index
+	eend $?
+}
